
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
<!-- Title for the application. [CHAR LIMIT=12] -->
<string name="app_name">Bondi Beach App</string>

<!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
<string name="name">Name</string>

<!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
<string name="equipment">equipment</string>

<!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
<string name="surf_board">Surf Board</string>

<!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
<string name="wetsuit">Wetsuit</string>

<!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
<string name="quantity">Quantity</string>

<!-- Hint text display in the empty field for the user's name [CHAR LIMIT=5] -->
<string name="initial_quantity_value">2</string>

<!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
<string name="order">Order</string>

<!--
  Name for the order summary. It will be shown in the format of "Name: Amy" where Amy is the
  user's name. [CHAR LIMIT=NONE]
-->
<string name="order_summary_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>

<!--
  Surf Board equipment for the order summary. It will be shown in the format of
  "Add surf board? true" or "Add surf board? false". [CHAR LIMIT=NONE]
-->
<string name="order_summary_surf_board">Add Surfboard? <xliff:g id="addSurfBoard" example="true">%b</xliff:g></string>

<!--
  Wetsuit equipment for the order summary. It will be shown in the format of
  "Add Wetsuit? true" or "Add Wetsuit? false". [CHAR LIMIT=NONE]
-->
<string name="order_summary_wetsuit">Add Wetsuit? <xliff:g id="addWetsuit" example="true">%b</xliff:g></string>

<!--
  Quantity of surf lesson for the order summary. It will be shown in the format of
  "Quantity: 2", where 2 is the number of cups ordered. [CHAR LIMIT=NONE]
-->
<string name="order_summary_quantity">Quantity: <xliff:g id="quantity" example="2">%d</xliff:g></string>

<!--
  Total price for the order summary. It will be shown in the format of
  "Total: $10" where $10 is the price. [CHAR LIMIT=NONE]
-->
<string name="order_summary_price">Total: <xliff:g id="price" example="$10">%s</xliff:g></string>

<!-- Thank you message for the order summary. [CHAR LIMIT=NONE] -->
<string name="thank_you">Thank you for your enquire. Please email bondiwaves@gmail.com and a member of our team will be in contact shortly!</string>

<!--
  Subject line for the order summary email. It will be in the format of
  "Surf Lessons And Equipment Hire for Amy" where Amy is the user's name. [CHAR LIMIT=NONE]
-->
<string name="order_summary_email_subject">Surf Lessons And Equipment Hire: <xliff:g id="name" example="Amy">%s</xliff:g></string>
</resources>