<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.paurictest.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_light"
            android:elevation="2dp"
            android:text="Learning To Surf"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="30dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:elevation="2dp"
            android:text="Surfing is highly addictive and it's one of the most popular board sports ever invented. There are over 20 million surfers in the world, and the number is growing fast.

\n\nEach surfer will have his or her own list of reasons they are drawn so irresistibly to the sport, but accounting for commonality, here are some very good reasons why surfing is so addictive:

\n\n 1. Riding a wave is a breathless experience
\n 2. Adrenaline injections pump our heart and blood
\n 3. Sun, salt and sand are a virtuous blend
\n 4. Oceans have a positive impact on human health
\n 5. The best way to forget your daily problems is to face bigger challenges

\n \nSo you want to surf, where to start..."
            android:textAllCaps="false" />

        <!--
               First section will be Get Coach, with Image drawn from
               resource file; image, header & text.
               -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_light"
            android:elevation="2dp"
            android:text="Get A Coach"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="30dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:elevation="2dp"
            android:src="@drawable/surfing" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:elevation="2dp"
            android:text="Going to a good surf school or camp offers two advantages compared to learning from well-intentioned surfing buddies. First, professional instructors are likely to have more experience than your friends, if not in years, then in the variety of conditions and situations they've faced. Also, a professional knows how to teach as well as what to teach. You learn the correct techniques safely and efficiently."
            android:textAllCaps="false" />

        <!--
              Second Section Will Be Surf Gear; image, header & text.
              -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_light"
            android:elevation="2dp"
            android:text="Surf Gear"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="30dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/gear" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="Water temperature is the main factor to consider when putting together a surfing wardrobe. If the water temperatures where you surf change with the seasons, and you plan to make this a permanent hobby, you may want to invest in an assortment of surf wear: a sleeveless vest, a long-sleeved jacket, and a head-to-toe, hooded wetsuit. Neoprene is the fabric of choice. This synthetic rubber is not only warm, but tough and durable as well. It's resistant to sunlight, chemicals and abrasion.

No wardrobe is complete without accessories. A leash is an ankle strap that secures you to your board. That saves you the trouble of chasing it across the bay if and when you wipe out, while preventing accidents caused by a wayward surfboard."
            android:textAllCaps="false" />

        <!--
             Third Section Will Be Pick A Board; image, header & text.
             -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_light"
            android:elevation="2dp"
            android:text="Pick A Board"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="30dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/boards" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:elevation="2dp"
            android:text="A first surfboard should be like a first car: a basic model, easy to handle, and built to last until you're ready for something with more horsepower. As with cars, the size and construction are two factors that most effect handling and durability.

Of the two elements, size is more important. A surfboard should match the user's size: shorter boards for smaller surfers. Longer, wider boards are more stable, however, so even a petite, 110-pound (50-kilogram) surfer should choose a board that's at least 7.5 feet (2.25 meters) long and 22 inches (55 centimeters) wide. A 9-foot (2.7-meter) board is more suitable for a novice who weighs about 200 pounds (91 kilograms)"
            android:textAllCaps="false" />

        <!--
             Fourth Section Will Be To Pick The Right Spot; image, header & text.
             -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_light"
            android:elevation="2dp"
            android:text="Find The Right Spot"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="30dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/spot" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:elevation="2dp"
            android:text="The ideal beginner's surf spot is the oceanic equivalent of the kiddie pool. It's a straight, sandy shoreline, free from hazardous rocks and reefs, with a few strategically placed sandbars. What makes this arrangement advantageous? Think of waves as energy plus water, just as a log fire is energy plus wood. In the same way a fire dies down when it runs out of wood, waves die when they run out of water. A sandy, gently rolling bottom gradually reduces the water available. It also creates friction at the base of the wave, slowing the water beneath the surface and allowing the water on top to catch up. The wave thus gains height, but not much: A wave's crest at its height is equal to the depth of the water below it, or less. In the shallow zone described here, waves might build to about 3 feet (1 meter) high."
            android:textAllCaps="false" />

        <!--
           Fifth Section Will Be To LEarn The Technique; image, header & text.
           -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_light"
            android:elevation="2dp"
            android:text="Be Patient!"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="30dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/tech" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="16dp"
            android:elevation="2dp"
            android:text="Learning any skill from square one can be frustratingly slow, especially for adults. The best thing to do is take a Zen approach. Absorb the basics and take baby steps to build a firm foundation for advanced learning.

Notice how the board's nose rests on the water before you get on. It should look the same when you lie on it, but slightly lower. If the nose rises higher or dips below the surface, you've altered the board's center of gravity. You need to slide forward or back to restore it. Pay attention to your paddling stroke, too. Strive to take long, steady strokes with palms cupped while keeping the rest of your body immobilized.

Use learning as an opportunity to develop patience. Being patient with yourself will make learning the technical skills easier and more rewarding. Patience also leads to calmness, which can be a lifesaver in a sport with as many potential hazards as surfing."
            android:textAllCaps="false" />

        <!--
          Sixth  Section Will Be To Interactive an
          email of your name, experience, dates that suit,
          gear needed, cost involved
          -->


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/holo_blue_light"
            android:elevation="2dp"
            android:text="Let's Get Started!"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="So now you are ready to start your journey. So why don't you start today. Fill out the details below. Please email beginnersbondiwaves@gmail.com and a member of our team will be in contact. Surf lessons cost $25 dollars. Surfboard Rental cost $5 and Wetsuit Rental is $5. "
            android:textAllCaps="false" />

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/equipment" />

        <CheckBox
            android:id="@+id/surf_board_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/surf_board"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/wetsuit_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/wetsuit"
            android:textSize="16sp" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decrement"
                android:text="-" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/initial_quantity_value"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:text="+" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"
            android:text="@string/order" />

    </LinearLayout>


</ScrollView>

